--- a/docs/celeba.ipynb
+++ b/docs/celeba.ipynb
@@ -2,19 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a9cfa0b0",
-   "metadata": {},
    "source": [
     "# Celeba"
-   ]
+   ],
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cace4adc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "source": [
+    "```bash\n",
+    "rm -rf /tmp/celeba.share\n",
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp \\\n",
+    "    benchmark/run.py\\\n",
+    "        --fed_init_method file:///tmp/celeba.share\\\n",
+    "        --task celeba\\\n",
+    "        --samples 10\\\n",
+    "        --data_root benchmark/datasets/celeba/data\n",
+    "```"
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
