--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -8,21 +8,12 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "source": [
+    "```bash\n",
     "rm -rf /tmp/mnist.share\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py --fed_init_method file:///tmp/mnist.share --network_args input_dim:784 --samples 10"
-   ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-998f2c95ba19>, line 1)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-998f2c95ba19>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py --network_args input_dim:784 --samples 10\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py --fed_init_method file:///tmp/mnist.share --network_args input_dim:784 --samples 10\n",
+    "```"
    ],
    "metadata": {}
   },
