--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -2,31 +2,336 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "015f8053",
+   "metadata": {},
    "source": [
     "# mnist"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "b06d74c1",
+   "metadata": {},
    "source": [
+    "## FedAvg, FedSGD, FedEla, FedProx, FedScaffold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad831d8a",
+   "metadata": {},
+   "source": [
+    "### FedAvg\n",
+    "\n",
     "```bash\n",
     "rm -rf /tmp/mnist.share\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py --fed_init_method file:///tmp/mnist.share --network_args input_dim:784 --samples 10\n",
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "    --fed_init_method file:///tmp/mnist.share\\\n",
+    "    --task mnist\\\n",
+    "    --network_args input_dim:784\\\n",
+    "    --data_root benchmark/datasets/mnist/data\\\n",
+    "    --partition dirichlet\\\n",
+    "    --num_parts 1000\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --samples 100\\\n",
+    "    --test_samples 100\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedavg\\\n",
+    "    --follower_lr 1e-2\\\n",
+    "    --leader_lr 1.0\\\n",
+    "    --bz 10\\\n",
+    "    --gpu\\\n",
+    "    --log_level SUCCESS\\\n",
+    "    --log_dir logs\\\n",
+    "    --exp_name fed_avg_dirichlet\\\n",
+    "    --pretrained ''\\\n",
+    "    --ckpt ''\\\n",
+    "    --seed 0\n",
     "```"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
+   "id": "8a7190c1",
+   "metadata": {},
+   "source": [
+    "### FedSGD\n",
+    "\n",
+    "```bash\n",
+    "rm -rf /tmp/mnist.share\n",
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "    --fed_init_method file:///tmp/mnist.share\\\n",
+    "    --task mnist\\\n",
+    "    --network_args input_dim:784\\\n",
+    "    --data_root benchmark/datasets/mnist/data\\\n",
+    "    --partition dirichlet\\\n",
+    "    --num_parts 1000\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --samples 100\\\n",
+    "    --test_samples 100\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedsgd\\\n",
+    "    --follower_lr 1e-2\\\n",
+    "    --leader_lr 1.0\\\n",
+    "    --bz 10\\\n",
+    "    --gpu\\\n",
+    "    --log_level SUCCESS\\\n",
+    "    --log_dir logs\\\n",
+    "    --exp_name fed_sgd_dirichlet\\\n",
+    "    --pretrained ''\\\n",
+    "    --ckpt ''\\\n",
+    "    --seed 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad831d8a",
+   "metadata": {},
+   "source": [
+    "### FedEla\n",
+    "\n",
+    "```bash\n",
+    "rm -rf /tmp/mnist.share\n",
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "    --fed_init_method file:///tmp/mnist.share\\\n",
+    "    --task mnist\\\n",
+    "    --network_args input_dim:784\\\n",
+    "    --data_root benchmark/datasets/mnist/data\\\n",
+    "    --partition dirichlet\\\n",
+    "    --num_parts 1000\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --samples 100\\\n",
+    "    --test_samples 100\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedela\\\n",
+    "    --follower_lr 1e-2\\\n",
+    "    --leader_lr 1.0\\\n",
+    "    --bz 10\\\n",
+    "    --gpu\\\n",
+    "    --log_level SUCCESS\\\n",
+    "    --log_dir logs\\\n",
+    "    --exp_name fed_ela_dirichlet\\\n",
+    "    --pretrained ''\\\n",
+    "    --ckpt ''\\\n",
+    "    --seed 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad831d8a",
+   "metadata": {},
+   "source": [
+    "### FedProx\n",
+    "\n",
+    "```bash\n",
+    "rm -rf /tmp/mnist.share\n",
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "    --fed_init_method file:///tmp/mnist.share\\\n",
+    "    --task mnist\\\n",
+    "    --network_args input_dim:784\\\n",
+    "    --data_root benchmark/datasets/mnist/data\\\n",
+    "    --partition dirichlet\\\n",
+    "    --num_parts 1000\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --samples 100\\\n",
+    "    --test_samples 100\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedprox\\\n",
+    "    --follower_lr 1e-2\\\n",
+    "    --leader_lr 1.0\\\n",
+    "    --bz 10\\\n",
+    "    --gpu\\\n",
+    "    --log_level SUCCESS\\\n",
+    "    --log_dir logs\\\n",
+    "    --exp_name fed_prox_dirichlet\\\n",
+    "    --pretrained ''\\\n",
+    "    --ckpt ''\\\n",
+    "    --seed 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad831d8a",
+   "metadata": {},
+   "source": [
+    "### FedScaffold\n",
+    "\n",
+    "```bash\n",
+    "rm -rf /tmp/mnist.share\n",
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "    --fed_init_method file:///tmp/mnist.share\\\n",
+    "    --task mnist\\\n",
+    "    --network_args input_dim:784\\\n",
+    "    --data_root benchmark/datasets/mnist/data\\\n",
+    "    --partition dirichlet\\\n",
+    "    --num_parts 1000\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --samples 100\\\n",
+    "    --test_samples 100\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedscaffold\\\n",
+    "    --follower_lr 1e-2\\\n",
+    "    --leader_lr 1.0\\\n",
+    "    --bz 10\\\n",
+    "    --gpu\\\n",
+    "    --log_level SUCCESS\\\n",
+    "    --log_dir logs\\\n",
+    "    --exp_name fed_scaffold_dirichlet\\\n",
+    "    --pretrained ''\\\n",
+    "    --ckpt ''\\\n",
+    "    --seed 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c427030a",
+   "metadata": {},
+   "source": [
+    "### Plot results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "adcdca78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "from benchmark.utils.plot import plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9da0afa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train Accuracy\n",
+    "plot(\n",
+    "    files=[\n",
+    "        '../logs/mnist/fed_avg_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_sgd_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_ela_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_prox_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_scaffold_dirichlet/mnist.json',\n",
+    "    ],\n",
+    "    labels=[\n",
+    "        'FedAvg',\n",
+    "        'FedSgd',\n",
+    "        'FedEla',\n",
+    "        'FedProx',\n",
+    "        'FedScaffold',\n",
+    "    ],\n",
+    "    attributes=\"accuracy\",\n",
+    "    train=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2817a343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train Loss\n",
+    "plot(\n",
+    "    files=[\n",
+    "        '../logs/mnist/fed_avg_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_sgd_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_ela_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_prox_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_scaffold_dirichlet/mnist.json',\n",
+    "    ],\n",
+    "    labels=[\n",
+    "        'FedAvg',\n",
+    "        'FedSgd',\n",
+    "        'FedEla',\n",
+    "        'FedProx',\n",
+    "        'FedScaffold',\n",
+    "    ],\n",
+    "    attributes=\"loss\",\n",
+    "    train=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2b7b226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test Accuracy\n",
+    "plot(\n",
+    "    files=[\n",
+    "        '../logs/mnist/fed_avg_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_sgd_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_ela_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_prox_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_scaffold_dirichlet/mnist.json',\n",
+    "    ],\n",
+    "    labels=[\n",
+    "        'FedAvg',\n",
+    "        'FedSgd',\n",
+    "        'FedEla',\n",
+    "        'FedProx',\n",
+    "        'FedScaffold',\n",
+    "    ],\n",
+    "    attributes=\"accuracy\",\n",
+    "    train=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02847b00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test Loss\n",
+    "plot(\n",
+    "    files=[\n",
+    "        '../logs/mnist/fed_avg_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_sgd_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_ela_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_prox_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fed_scaffold_dirichlet/mnist.json',\n",
+    "    ],\n",
+    "    labels=[\n",
+    "        'FedAvg',\n",
+    "        'FedSgd',\n",
+    "        'FedEla',\n",
+    "        'FedProx',\n",
+    "        'FedScaffold',\n",
+    "    ],\n",
+    "    attributes=\"loss\",\n",
+    "    train=False\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0e6fd2d1cd7e2d86bf1f0b979bf122c4f5767f524de329087879d3b4cf9f9436"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.10 64-bit ('openfed': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -39,9 +344,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
-  },
-  "interpreter": {
-   "hash": "0e6fd2d1cd7e2d86bf1f0b979bf122c4f5767f524de329087879d3b4cf9f9436"
   }
  },
  "nbformat": 4,
