replace train with mode

--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad831d8a",
+   "id": "91b622d6",
    "metadata": {},
    "source": [
     "### FedEla\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad831d8a",
+   "id": "5db45ad2",
    "metadata": {},
    "source": [
     "### FedProx\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad831d8a",
+   "id": "1b48fdad",
    "metadata": {},
    "source": [
     "### FedScaffold\n",
@@ -213,26 +213,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9da0afa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'train'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-bd58e44d8125>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m     ],\n\u001b[1;32m     17\u001b[0m     \u001b[0mattributes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"accuracy\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m )\n",
+      "\u001b[0;32m~/miniconda3/envs/openfed/lib/python3.7/site-packages/benchmark-0.0.0-py3.7.egg/benchmark/utils/plot.py\u001b[0m in \u001b[0;36mplot\u001b[0;34m(files, labels, attributes, train)\u001b[0m\n\u001b[1;32m     20\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m                     \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'version'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m                     \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mattributes\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'train'"
+     ]
+    }
+   ],
    "source": [
     "# Train Accuracy\n",
     "plot(\n",
     "    files=[\n",
     "        '../logs/mnist/fed_avg_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fed_sgd_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fed_ela_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fed_prox_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fed_scaffold_dirichlet/mnist.json',\n",
+    "        # '../logs/mnist/fed_sgd_dirichlet/mnist.json',\n",
+    "        # '../logs/mnist/fed_ela_dirichlet/mnist.json',\n",
+    "        # '../logs/mnist/fed_prox_dirichlet/mnist.json',\n",
+    "        # '../logs/mnist/fed_scaffold_dirichlet/mnist.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
-    "        'FedSgd',\n",
-    "        'FedEla',\n",
-    "        'FedProx',\n",
-    "        'FedScaffold',\n",
+    "        # 'FedSgd',\n",
+    "        # 'FedEla',\n",
+    "        # 'FedProx',\n",
+    "        # 'FedScaffold',\n",
     "    ],\n",
     "    attributes=\"accuracy\",\n",
     "    train=True\n",
