fix optim error

--- a/docs/celeba.ipynb
+++ b/docs/celeba.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "849dc20e",
+   "metadata": {},
+   "source": [
+    "## FedAvg, FedSGD, FedEla, FedProx, FedScaffold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f23f8cc0",
    "metadata": {},
    "source": [
@@ -21,6 +29,36 @@
     "        --task celeba\\\n",
     "        --samples 10\\\n",
     "        --data_root benchmark/datasets/celeba/data\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e355770c",
+   "metadata": {},
+   "source": [
+    "### FedAvg\n",
+    "\n",
+    "```bash\n",
+    "rm -rf /tmp/fedavg.share\n",
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "    --fed_init_method file:///tmp/fedavg_celeba.share\\\n",
+    "    --task celeba\\\n",
+    "    --data_root benchmark/datasets/celeba/data\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --act_clts 100\\\n",
+    "    --tst_act_clts 100\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedavg\\\n",
+    "    --follower_lr 1e-2\\\n",
+    "    --leader_lr 10.0\\\n",
+    "    --bz 10\\\n",
+    "    --gpu\\\n",
+    "    --log_level SUCCESS\\\n",
+    "    --log_dir logs\\\n",
+    "    --exp_name fedavg\n",
+    "    --seed 0\n",
     "```"
    ]
   },
