--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -24,9 +24,9 @@
     "### FedAvg\n",
     "\n",
     "```bash\n",
-    "rm -rf /tmp/fed_avg_dirichlet.share\n",
+    "rm -rf /tmp/fedavg_dirichlet.share\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fed_avg_dirichlet.share\\\n",
+    "    --fed_init_method file:///tmp/fedavg_dirichlet.share\\\n",
     "    --task mnist\\\n",
     "    --network_args input_dim:784\\\n",
     "    --data_root benchmark/datasets/mnist/data\\\n",
@@ -34,8 +34,8 @@
     "    --num_parts 1000\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
-    "    --samples 100\\\n",
-    "    --test_samples 100\\\n",
+    "    --act_clts 100\\\n",
+    "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
     "    --optim fedavg\\\n",
     "    --follower_lr 1e-2\\\n",
@@ -44,9 +44,7 @@
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fed_avg_dirichlet\\\n",
-    "    --pretrained ''\\\n",
-    "    --ckpt ''\\\n",
+    "    --exp_name fedavg_dirichlet\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -59,9 +57,9 @@
     "### FedSGD\n",
     "\n",
     "```bash\n",
-    "rm -rf /tmp/fed_sgd_dirichlet.share\n",
+    "rm -rf /tmp/fedsgd_dirichlet.share\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fed_sgd_dirichlet.share\\\n",
+    "    --fed_init_method file:///tmp/fedsgd_dirichlet.share\\\n",
     "    --task mnist\\\n",
     "    --network_args input_dim:784\\\n",
     "    --data_root benchmark/datasets/mnist/data\\\n",
@@ -69,8 +67,8 @@
     "    --num_parts 1000\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
-    "    --samples 100\\\n",
-    "    --test_samples 100\\\n",
+    "    --act_clts 100\\\n",
+    "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
     "    --optim fedsgd\\\n",
     "    --follower_lr 1e-2\\\n",
@@ -79,9 +77,7 @@
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fed_sgd_dirichlet\\\n",
-    "    --pretrained ''\\\n",
-    "    --ckpt ''\\\n",
+    "    --exp_name fedsgd_dirichlet\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -94,9 +90,9 @@
     "### FedEla\n",
     "\n",
     "```bash\n",
-    "rm -rf /tmp/fed_ela_dirichlet.share\n",
+    "rm -rf /tmp/fedela_dirichlet.share\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fed_ela_dirichlet.share\\\n",
+    "    --fed_init_method file:///tmp/fedela_dirichlet.share\\\n",
     "    --task mnist\\\n",
     "    --network_args input_dim:784\\\n",
     "    --data_root benchmark/datasets/mnist/data\\\n",
@@ -104,19 +100,17 @@
     "    --num_parts 1000\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
-    "    --samples 100\\\n",
-    "    --test_samples 100\\\n",
+    "    --act_clts 100\\\n",
+    "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
     "    --optim fedela\\\n",
     "    --follower_lr 1e-2\\\n",
-    "    --leader_lr 1.0\\\n",
+    "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fed_ela_dirichlet\\\n",
-    "    --pretrained ''\\\n",
-    "    --ckpt ''\\\n",
+    "    --exp_name fedela_dirichlet\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -129,9 +123,9 @@
     "### FedProx\n",
     "\n",
     "```bash\n",
-    "rm -rf /tmp/fed_prox_dirichlet.share\n",
+    "rm -rf /tmp/fedprox_dirichlet.share\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fed_prox_dirichlet.share\\\n",
+    "    --fed_init_method file:///tmp/fedprox_dirichlet.share\\\n",
     "    --task mnist\\\n",
     "    --network_args input_dim:784\\\n",
     "    --data_root benchmark/datasets/mnist/data\\\n",
@@ -139,19 +133,17 @@
     "    --num_parts 1000\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
-    "    --samples 100\\\n",
-    "    --test_samples 100\\\n",
+    "    --act_clts 100\\\n",
+    "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
     "    --optim fedprox\\\n",
     "    --follower_lr 1e-2\\\n",
-    "    --leader_lr 1.0\\\n",
+    "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fed_prox_dirichlet\\\n",
-    "    --pretrained ''\\\n",
-    "    --ckpt ''\\\n",
+    "    --exp_name fedprox_dirichlet\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -174,19 +166,17 @@
     "    --num_parts 1000\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
-    "    --samples 100\\\n",
-    "    --test_samples 100\\\n",
+    "    --act_clts 100\\\n",
+    "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
     "    --optim fedscaffold\\\n",
     "    --follower_lr 1e-2\\\n",
-    "    --leader_lr 1.0\\\n",
+    "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
     "    --exp_name fed_scaffold_dirichlet\\\n",
-    "    --pretrained ''\\\n",
-    "    --ckpt ''\\\n",
     "    --seed 0\n",
     "```"
    ]
