--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -13,7 +13,9 @@
    "id": "b06d74c1",
    "metadata": {},
    "source": [
-    "## FedAvg, FedSGD, FedEla, FedProx, FedScaffold"
+    "## FedAvg, FedSGD, FedEla, FedProx, FedScaffold\n",
+    "\n",
+    "Run following commands in the root path of this"
    ]
   },
   {
@@ -24,7 +26,11 @@
     "### FedAvg\n",
     "\n",
     "```bash\n",
+    "# Delete cache file\n",
     "rm -rf /tmp/fedavg_dirichlet.share\n",
+    "rm -rf /tmp/mnist/fedavg_dirichlet\n",
+    "rm -rf ./logs/mnist/fedavg_dirichlet\n",
+    "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
     "    --fed_init_method file:///tmp/fedavg_dirichlet.share\\\n",
     "    --task mnist\\\n",
@@ -57,7 +63,11 @@
     "### FedSGD\n",
     "\n",
     "```bash\n",
+    "# Delete cache file\n",
     "rm -rf /tmp/fedsgd_dirichlet.share\n",
+    "rm -rf /tmp/mnist/fedsgd_dirichlet\n",
+    "rm -rf ./logs/mnist/fedsgd_dirichlet\n",
+    "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
     "    --fed_init_method file:///tmp/fedsgd_dirichlet.share\\\n",
     "    --task mnist\\\n",
@@ -90,7 +100,11 @@
     "### FedEla\n",
     "\n",
     "```bash\n",
+    "# Delete cache file\n",
     "rm -rf /tmp/fedela_dirichlet.share\n",
+    "rm -rf /tmp/mnist/fedela_dirichlet\n",
+    "rm -rf ./logs/mnist/fedela_dirichlet\n",
+    "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
     "    --fed_init_method file:///tmp/fedela_dirichlet.share\\\n",
     "    --task mnist\\\n",
@@ -123,7 +137,11 @@
     "### FedProx\n",
     "\n",
     "```bash\n",
+    "# Delete cache file\n",
     "rm -rf /tmp/fedprox_dirichlet.share\n",
+    "rm -rf /tmp/mnist/fedprox_dirichlet\n",
+    "rm -rf ./logs/mnist/fedprox_dirichlet\n",
+    "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
     "    --fed_init_method file:///tmp/fedprox_dirichlet.share\\\n",
     "    --task mnist\\\n",
@@ -156,9 +174,13 @@
     "### FedScaffold\n",
     "\n",
     "```bash\n",
-    "rm -rf /tmp/fed_scaffold_dirichlet.share\n",
+    "# Delete cache file\n",
+    "rm -rf /tmp/fedscaffold_dirichlet.share\n",
+    "rm -rf /tmp/mnist/fedscaffold_dirichlet\n",
+    "rm -rf ./logs/mnist/fedscaffold_dirichlet\n",
+    "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fed_scaffold_dirichlet.share\\\n",
+    "    --fed_init_method file:///tmp/fedscaffold_dirichlet.share\\\n",
     "    --task mnist\\\n",
     "    --network_args input_dim:784\\\n",
     "    --data_root benchmark/datasets/mnist/data\\\n",
@@ -176,7 +198,7 @@
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fed_scaffold_dirichlet\\\n",
+    "    --exp_name fedscaffold_dirichlet\\\n",
     "    --seed 0\n",
     "```"
    ]
