--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -208,7 +208,7 @@
    "id": "c427030a",
    "metadata": {},
    "source": [
-    "### Plot results"
+    "## Plot results"
    ]
   },
   {
@@ -221,6 +221,14 @@
     "%matplotlib inline\n",
     "\n",
     "from benchmark.utils.plot import plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "910f7b5e",
+   "metadata": {},
+   "source": [
+    "### Train Accuracy"
    ]
   },
   {
@@ -243,25 +251,32 @@
     }
    ],
    "source": [
-    "# Train Accuracy\n",
     "plot(\n",
     "    files=[\n",
-    "        '../logs/mnist/fed_avg_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fed_sgd_dirichlet/mnist.json',\n",
-    "        # '../logs/mnist/fed_ela_dirichlet/mnist.json',\n",
-    "        # '../logs/mnist/fed_prox_dirichlet/mnist.json',\n",
-    "        # '../logs/mnist/fed_scaffold_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedavg_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedsgd_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedela_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedprox_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedscaffold_dirichlet/mnist.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
     "        'FedSgd',\n",
-    "        # 'FedEla',\n",
-    "        # 'FedProx',\n",
-    "        # 'FedScaffold',\n",
+    "        'FedEla',\n",
+    "        'FedProx',\n",
+    "        'FedScaffold',\n",
     "    ],\n",
     "    attributes=\"accuracy\",\n",
     "    mode='train'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8400c0b4",
+   "metadata": {},
+   "source": [
+    "### Train Loss"
    ]
   },
   {
@@ -284,25 +299,32 @@
     }
    ],
    "source": [
-    "# Train Loss\n",
     "plot(\n",
     "    files=[\n",
-    "        '../logs/mnist/fed_avg_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fed_sgd_dirichlet/mnist.json',\n",
-    "        # '../logs/mnist/fed_ela_dirichlet/mnist.json',\n",
-    "        # '../logs/mnist/fed_prox_dirichlet/mnist.json',\n",
-    "        # '../logs/mnist/fed_scaffold_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedavg_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedsgd_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedela_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedprox_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedscaffold_dirichlet/mnist.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
     "        'FedSgd',\n",
-    "        # 'FedEla',\n",
-    "        # 'FedProx',\n",
-    "        # 'FedScaffold',\n",
+    "        'FedEla',\n",
+    "        'FedProx',\n",
+    "        'FedScaffold',\n",
     "    ],\n",
     "    attributes=\"loss\",\n",
     "    mode=\"train\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f22394a0",
+   "metadata": {},
+   "source": [
+    "### Test Accuracy"
    ]
   },
   {
@@ -312,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test Accuracy\n",
+    "\n",
     "plot(\n",
     "    files=[\n",
     "        '../logs/mnist/fed_avg_dirichlet/mnist.json',\n",
