--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## FedAvg, FedSGD, FedEla, FedProx, FedScaffold\n",
     "\n",
-    "Run following commands in the root path of this"
+    "Run following commands in the root path of `benchmark-lightly`."
    ]
   },
   {
@@ -208,7 +208,7 @@
    "id": "c427030a",
    "metadata": {},
    "source": [
-    "## Plot results"
+    "## Plot Curves"
    ]
   },
   {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b69b3b7a",
+   "id": "cee0696e",
    "metadata": {},
    "source": [
     "### Train Accuracy"
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52b0c489",
+   "id": "a1581e8d",
    "metadata": {},
    "source": [
     "### Train Loss"
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b6af209",
+   "id": "e54ac9b1",
    "metadata": {},
    "source": [
     "### Test Accuracy"
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d14b2f",
+   "id": "6c869eb7",
    "metadata": {},
    "source": [
     "### Test Loss"
