--- a/docs/celeba.ipynb
+++ b/docs/celeba.ipynb
@@ -10,37 +10,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "849dc20e",
+   "id": "8fed1136",
    "metadata": {},
    "source": [
-    "## FedAvg, FedSGD, FedEla, FedProx, FedScaffold"
+    "## FedAvg, FedSGD, FedEla, FedProx, FedScaffold\n",
+    "\n",
+    "Run following commands in the root path of `benchmark-lightly`."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f23f8cc0",
-   "metadata": {},
-   "source": [
-    "```bash\n",
-    "rm -rf /tmp/celeba.share\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp \\\n",
-    "    benchmark/run.py\\\n",
-    "        --fed_init_method file:///tmp/celeba.share\\\n",
-    "        --task celeba\\\n",
-    "        --samples 10\\\n",
-    "        --data_root benchmark/datasets/celeba/data\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e355770c",
+   "id": "cce4df60",
    "metadata": {},
    "source": [
     "### FedAvg\n",
     "\n",
     "```bash\n",
-    "rm -rf /tmp/fedavg.share\n",
+    "# Delete cache file\n",
+    "rm -rf /tmp/fedavg_celeba.share\n",
+    "rm -rf /tmp/celeba/fedavg_celeba\n",
+    "rm -rf ./logs/deleba/fedavg_celeba\n",
+    "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
     "    --fed_init_method file:///tmp/fedavg_celeba.share\\\n",
     "    --task celeba\\\n",
@@ -57,7 +47,143 @@
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedavg\n",
+    "    --exp_name fedavg_celeba\n",
+    "    --seed 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e4e5950",
+   "metadata": {},
+   "source": [
+    "### FedSgd\n",
+    "\n",
+    "```bash\n",
+    "# Delete cache file\n",
+    "rm -rf /tmp/fedsgd_celeba.share\n",
+    "rm -rf /tmp/celeba/fedsgd_celeba\n",
+    "rm -rf ./logs/deleba/fedsgd_celeba\n",
+    "# Run\n",
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "    --fed_init_method file:///tmp/fedsgd_celeba.share\\\n",
+    "    --task celeba\\\n",
+    "    --data_root benchmark/datasets/celeba/data\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --act_clts 100\\\n",
+    "    --tst_act_clts 100\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedavg\\\n",
+    "    --follower_lr 1e-2\\\n",
+    "    --leader_lr 10.0\\\n",
+    "    --bz 10\\\n",
+    "    --gpu\\\n",
+    "    --log_level SUCCESS\\\n",
+    "    --log_dir logs\\\n",
+    "    --exp_name fedsgd_celeba\n",
+    "    --seed 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "439a2188",
+   "metadata": {},
+   "source": [
+    "### FedEla\n",
+    "\n",
+    "```bash\n",
+    "# Delete cache file\n",
+    "rm -rf /tmp/fedela_celeba.share\n",
+    "rm -rf /tmp/celeba/fedela_celeba\n",
+    "rm -rf ./logs/deleba/fedela_celeba\n",
+    "# Run\n",
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "    --fed_init_method file:///tmp/fedela_celeba.share\\\n",
+    "    --task celeba\\\n",
+    "    --data_root benchmark/datasets/celeba/data\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --act_clts 100\\\n",
+    "    --tst_act_clts 100\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedela\\\n",
+    "    --follower_lr 1e-2\\\n",
+    "    --leader_lr 10.0\\\n",
+    "    --bz 10\\\n",
+    "    --gpu\\\n",
+    "    --log_level SUCCESS\\\n",
+    "    --log_dir logs\\\n",
+    "    --exp_name fedela_celeba\n",
+    "    --seed 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0426a9e3",
+   "metadata": {},
+   "source": [
+    "### FedProx\n",
+    "\n",
+    "```bash\n",
+    "# Delete cache file\n",
+    "rm -rf /tmp/fedprox_celeba.share\n",
+    "rm -rf /tmp/celeba/fedprox_celeba\n",
+    "rm -rf ./logs/deleba/fedprox_celeba\n",
+    "# Run\n",
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "    --fed_init_method file:///tmp/fedprox_celeba.share\\\n",
+    "    --task celeba\\\n",
+    "    --data_root benchmark/datasets/celeba/data\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --act_clts 100\\\n",
+    "    --tst_act_clts 100\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedprox\\\n",
+    "    --follower_lr 1e-2\\\n",
+    "    --leader_lr 10.0\\\n",
+    "    --bz 10\\\n",
+    "    --gpu\\\n",
+    "    --log_level SUCCESS\\\n",
+    "    --log_dir logs\\\n",
+    "    --exp_name fedprox_celeba\n",
+    "    --seed 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5765775",
+   "metadata": {},
+   "source": [
+    "### FedScaffold\n",
+    "\n",
+    "```bash\n",
+    "# Delete cache file\n",
+    "rm -rf /tmp/fedscaffold_celeba.share\n",
+    "rm -rf /tmp/celeba/fedscaffold_celeba\n",
+    "rm -rf ./logs/deleba/fedscaffold_celeba\n",
+    "# Run\n",
+    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "    --fed_init_method file:///tmp/fedscaffold_celeba.share\\\n",
+    "    --task celeba\\\n",
+    "    --data_root benchmark/datasets/celeba/data\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --act_clts 100\\\n",
+    "    --tst_act_clts 100\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedscaffold\\\n",
+    "    --follower_lr 1e-2\\\n",
+    "    --leader_lr 10.0\\\n",
+    "    --bz 10\\\n",
+    "    --gpu\\\n",
+    "    --log_level SUCCESS\\\n",
+    "    --log_dir logs\\\n",
+    "    --exp_name fedscaffold_celeba\n",
     "    --seed 0\n",
     "```"
    ]
@@ -67,7 +193,27 @@
    "id": "9fc0e04a",
    "metadata": {},
    "source": [
-    "## plot"
+    "## Plot Curves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "415a8d0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "from benchmark.utils.plot import plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5326af0",
+   "metadata": {},
+   "source": [
+    "### Train Accuracy"
    ]
   },
   {
@@ -90,11 +236,32 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "from benchmark.utils.plot import plot\n",
-    "\n",
-    "plot('../logs/celeba/default/celeba.json', 'default')"
+    "plot(\n",
+    "    files=[\n",
+    "        '../logs/celeba/fedavg_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedsgd_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedela_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedprox_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedscaffold_dirichlet/celeba.json',\n",
+    "    ],\n",
+    "    labels=[\n",
+    "        'FedAvg',\n",
+    "        'FedSgd',\n",
+    "        'FedEla',\n",
+    "        'FedProx',\n",
+    "        'FedScaffold',\n",
+    "    ],\n",
+    "    attributes=\"accuracy\",\n",
+    "    mode='train'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0fa816e",
+   "metadata": {},
+   "source": [
+    "### Train Loss"
    ]
   },
   {
@@ -103,7 +270,96 @@
    "id": "4039b34c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plot(\n",
+    "    files=[\n",
+    "        '../logs/celeba/fedavg_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedsgd_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedela_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedprox_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedscaffold_dirichlet/celeba.json',\n",
+    "    ],\n",
+    "    labels=[\n",
+    "        'FedAvg',\n",
+    "        'FedSgd',\n",
+    "        'FedEla',\n",
+    "        'FedProx',\n",
+    "        'FedScaffold',\n",
+    "    ],\n",
+    "    attributes=\"loss\",\n",
+    "    mode=\"train\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adb1b75a",
+   "metadata": {},
+   "source": [
+    "### Test Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d43ee9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(\n",
+    "    files=[\n",
+    "        '../logs/celeba/fedavg_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedsgd_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedela_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedprox_dirichlet/celeba.json',\n",
+    "        '../logs/celeba/fedscaffold_dirichlet/celeba.json',\n",
+    "    ],\n",
+    "    labels=[\n",
+    "        'FedAvg',\n",
+    "        'FedSgd',\n",
+    "        'FedEla',\n",
+    "        'FedProx',\n",
+    "        'FedScaffold',\n",
+    "    ],\n",
+    "    attributes=\"accuracy\",\n",
+    "    mode=\"test\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "392f666c",
+   "metadata": {},
+   "source": [
+    "### Test Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "965d1ae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(\n",
+    "    files=[\n",
+    "        '../logs/mnist/fedavg_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedsgd_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedela_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedprox_dirichlet/mnist.json',\n",
+    "        '../logs/mnist/fedscaffold_dirichlet/mnist.json',\n",
+    "    ],\n",
+    "    labels=[\n",
+    "        'FedAvg',\n",
+    "        'FedSgd',\n",
+    "        'FedEla',\n",
+    "        'FedProx',\n",
+    "        'FedScaffold',\n",
+    "    ],\n",
+    "    attributes=\"loss\",\n",
+    "    mode='test'\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
